--- a/WitcherResponsesBot/WitcherResponsesBot/packages.config
+++ b/WitcherResponsesBot/WitcherResponsesBot/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
-  <package id="RedditSharp" version="1.1.14" targetFramework="net452" requireReinstallation="true" />
-  <package id="SoundCloud.API.Client" version="1.0.0.5" targetFramework="net452" />
+  <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="RedditSharp" version="1.1.14" targetFramework="net461" />
 </packages>
