--- a/WitcherResponsesBot/WitcherResponsesBot/WitcherResponsesBot.csproj
+++ b/WitcherResponsesBot/WitcherResponsesBot/WitcherResponsesBot.csproj
@@ -56,6 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Debug.cs" />
+    <Compile Include="GamepediaResponsesParser.cs" />
+    <Compile Include="Models\CharacterResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedditManager.cs" />
@@ -65,6 +69,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
