--- a/WitcherResponsesBot/WitcherResponsesBot/WitcherResponsesBot.csproj
+++ b/WitcherResponsesBot/WitcherResponsesBot/WitcherResponsesBot.csproj
@@ -56,14 +56,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
+    <Compile Include="Bot\ReplyWithResponsesBot.cs" />
+    <Compile Include="Services\RedditService.cs" />
+    <Compile Include="Utility\Constants.cs" />
     <Compile Include="Debug.cs" />
-    <Compile Include="GamepediaResponsesParser.cs" />
+    <Compile Include="Services\GamepediaResponsesParser.cs" />
     <Compile Include="Models\CharacterResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RedditManager.cs" />
-    <Compile Include="ResponsesDatabase.cs" />
+    <Compile Include="Services\ResponsesDatabase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
